tests/snapshots/ui_transcription_snapshot_tests__device_selector_popup.snap
---
source: tests/ui_transcription_snapshot_tests.rs
expression: render(&app).backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│        Transcription Mode  [Auto]  [alsa_input.usb-Blue_Microphones (description)]  [Tiny]       │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Transcript────────────────────────────────────────────────────────────────────────────────────────┐"
"│Transcribed text will appear here...                                                              │"
"│                                                                                                  │"
"│              ┌Select Audio Device─────────────────────────────────────────────────┐              │"
"│              │  alsa_input.pci-0000_00_1f.3.analog-stereo (description)           │              │"
"│              │> alsa_input.usb-Blue_Microphones (description) [current]           │              │"
"└──────────────│  bluez_input.00_11_22_33_44_55 (description)                       │──────────────┘"
"┌Pinyin────────│                                                                    │──────────────┐"
"│Pinyin will ap│                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"└──────────────│                                                                    │──────────────┘"
"┌Translation───│                                                                    │──────────────┐"
"│Translation wi│                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ [STOP]   Press Space to start recording                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"            Space: Record | Ctrl+D: Device | Ctrl+S: Settings | Ctrl+X: Clear | Esc: Quit           "
"                                                                                                    "
