tests/snapshots/ui_transcription_snapshot_tests__idle_before_the_model_is_loaded.snap
---
source: tests/ui_transcription_snapshot_tests.rs
expression: render(&app).backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                           Transcription Mode  [Auto]  [Default]  [Tiny]                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Transcript────────────────────────────────────────────────────────────────────────────────────────┐"
"│Transcribed text will appear here...                                                              │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Pinyin────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Pinyin will appear here...                                                                        │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Translation───────────────────────────────────────────────────────────────────────────────────────┐"
"│Translation will appear here...                                                                   │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ [STOP]   Press Space to start recording                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"            Space: Record | Ctrl+D: Device | Ctrl+S: Settings | Ctrl+X: Clear | Esc: Quit           "
"                                                                                                    "
