tests/snapshots/ui_transcription_snapshot_tests__recording_with_voice_detected.snap
---
source: tests/ui_transcription_snapshot_tests.rs
expression: render(&app).backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                           Transcription Mode  [Auto]  [Default]  [Tiny]                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Transcript────────────────────────────────────────────────────────────────────────────────────────┐"
"│Transcribed text will appear here...                                                              │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Pinyin────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Pinyin will appear here...                                                                        │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Translation───────────────────────────────────────────────────────────────────────────────────────┐"
"│Translation will appear here...                                                                   │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ [REC]  [VOICE]   Model ready. Press Space to record.                                             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"            Space: Record | Ctrl+D: Device | Ctrl+S: Settings | Ctrl+X: Clear | Esc: Quit           "
"                                                                                                    "
