tests/snapshots/ui_transcription_snapshot_tests__transcription_settings_popup.snap
---
source: tests/ui_transcription_snapshot_tests.rs
expression: render(&app).backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                           Transcription Mode  [Auto]  [Default]  [Tiny]                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Transcript────────────────────────────────────────────────────────────────────────────────────────┐"
"│Transcribed text will appear here...                                                              │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└───────────────────┌Transcription Settings────────────────────────────────────┐───────────────────┘"
"┌Pinyin─────────────│> Language: < Auto >                                      │───────────────────┐"
"│Pinyin will appear │  Whisper Model: < Tiny >                                 │                   │"
"│                   │                                                          │                   │"
"│                   │Left/Right: cycle | Esc: close                            │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"└───────────────────│                                                          │───────────────────┘"
"┌Translation────────│                                                          │───────────────────┐"
"│Translation will ap│                                                          │                   │"
"│                   └──────────────────────────────────────────────────────────┘                   │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ [STOP]   Press Space to start recording                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"            Space: Record | Ctrl+D: Device | Ctrl+S: Settings | Ctrl+X: Clear | Esc: Quit           "
"                                                                                                    "
