tests/snapshots/ui_transcription_snapshot_tests__while_the_model_downloads.snap
---
source: tests/ui_transcription_snapshot_tests.rs
expression: render(&app).backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                           Transcription Mode  [Auto]  [Default]  [Tiny]                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Transcript────────────────────────────────────────────────────────────────────────────────────────┐"
"│Transcribed text will appear here...                                                              │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Pinyin────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Pinyin will appear here...                                                                        │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Translation───────────────────────────────────────────────────────────────────────────────────────┐"
"│Translation will appear here...                                                                   │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ [STOP]   Downloading ggml-tiny.bin (35%)                                                         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"            Space: Record | Ctrl+D: Device | Ctrl+S: Settings | Ctrl+X: Clear | Esc: Quit           "
"                                                                                                    "
